# juju

./: .gitignore  manage.py  pyproject.toml
juju/: apps.py  views.py
juju_demo/: asgi.py  settings.py  urls.py  wsgi.py
playground/: admin.py  blog.json  index.json  models.py  serializers.py  urls.py  views.py
playground/migrations/: 0001_initial.py  0002_portal_widget_page_pagewidget_page_widgets.py  0003_alter_page_slug_alter_portal_slug_alter_widget_slug.py
